cmake_minimum_required(VERSION 2.8.12)
project(process_injection_example C)

if(POLICY CMP0042)
    cmake_policy(SET CMP0042 NEW)
endif()
if(POLICY CMP0054)
    cmake_policy(SET CMP0054 NEW)
endif()

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

set(EXAMPLE_VERSION_MAJOR 1)
set(EXAMPLE_VERSION_MINOR 0)
set(EXAMPLE_VERSION_PATCH 0)

set(EXAMPLE_VERSION ${EXAMPLE_VERSION_MAJOR})
set(EXAMPLE_VERSION ${EXAMPLE_VERSION}.${EXAMPLE_VERSION_MINOR})
set(EXAMPLE_VERSION ${EXAMPLE_VERSION}.${EXAMPLE_VERSION_PATCH})

set(EXAMPLE_SOURCES htop_hook.c)

add_subdirectory(subhook)

add_library(htop_hook SHARED ${EXAMPLE_HEADERS} ${EXAMPLE_SOURCES})

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
set_property(DIRECTORY ${CMAKE_SOURCE_DIR} APPEND PROPERTY INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})